main and footer added

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <link rel="stylesheet" href="styles/responsive.css">
 </head>
 <body>
-    <!--------------------------------------------------------
+    <!---------------------------------------------------------
          header start 
     ----------------------------------------------------------->
-    <header>
-        <div class="nav-container">
+    <main>
+        <nav class="nav-container">
             <p class="logo-title">Influencer products</p>
             <ul class="items">
                 <li class="item">Home</li>
@@ -27,11 +27,13 @@
                 <i class="fa-solid fa-magnifying-glass item"></i>
                 <i class="fa-solid fa-cart-shopping item"></i>
             </ul>
-        </div>
-        <!-- banner section -->
+        </nav>
+        <!-------------------------------------------------------------------- 
+             banner 
+        ---------------------------------------------------------------------->
         <div class="banner">
             <div class="banner-details">
-                <h1 class="banner-title">Start your Journey as <br> Influencer</h1>
+                <h1 class="banner-title">Start your Journey as Influencer</h1>
                 <p class="banner-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed scelerisque eros. Lectus faucibus.</p>
                 <button class="btn-primary">Preebook now  <i class="fa-solid fa-arrow-right"></i></button>
             </div>
@@ -39,15 +41,234 @@
                 <img src="images/main-camera.png" alt="">
             </div>
         </div>
-    </header>
-    <!--------------------------------------------------------- 
+        <!------------------------------------------------------------------
+             websites 
+        -------------------------------------------------------------------->
+        <div class="websites">
+            <div class="website">
+                <img src="logos/Alibaba.svg" alt="">
+            </div>
+            <div class="website">
+                <img src="logos/Amazon.svg" alt="">
+            </div>
+            <div class="website">
+                <img src="logos/Daraz.pk Logo.svg" alt="">
+            </div>
+            <div class="website">
+                <img src="logos/Ebay.svg" alt="">
+            </div>
+            <div class="website">
+                <img src="logos/Rakuten.svg" alt="">
+            </div>
+            <div class="website">
+                <img src="logos/Walmart.svg" alt="">
+            </div>
+            <div class="website">
+                <img src="logos/Target.svg" alt="">
+            </div>
+        </div>
+    <!-- </header> -->
+    <!------------------------------------------------------------- 
         header end 
-    ----------------------------------------------------------->
-    <main>
-
+    --------------------------------------------------------------->
+    <!-- <main> -->
+    <!--------------------------------------------------------------
+         popular collection
+    ---------------------------------------------------------------->
+    <section class="popular-collection">
+        <h1 class="collection-title">Popular Collection</h1>
+        <div class="collections">
+            <div class="collection">
+                <div class="collection-banner">
+                    <img src="images/tripod.png" alt="">
+                </div>
+                <div class="collection-detail">
+                    <h3 class="title">Flex Tripod</h4>
+                    <p class="collection-amnt">$50.48</p>
+                    <div class="ratings">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star-half-stroke"></i>
+                        <span class="point">4.99</span>
+                    </div>
+                    <p class="collection-descript">Wordwide shifting available Buyers protection possible!</p>
+                </div>
+            </div>
+            <div class="collection">
+                <div class="collection-banner">
+                    <img src="images/mic.png" alt="">
+                </div>
+                <div class="collection-detail">
+                    <h3 class="title">microphone</h4>
+                    <p class="collection-amnt">$120.25</p>
+                    <div class="ratings">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star-half-stroke"></i>
+                        <span class="point">4.99</span>
+                    </div>
+                    <p class="collection-descript">Wordwide shifting available Buyers protection possible!</p>
+                </div>
+            </div>
+            <div class="collection">
+                <div class="collection-banner">
+                    <img src="images/airpod.png" alt="">
+                </div>
+                <div class="collection-detail">
+                    <h3 class="title">Airbuds</h4>
+                    <p class="collection-amnt">$100.00</p>
+                    <div class="ratings">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star-half-stroke"></i>
+                        <span class="point">4.99</span>
+                    </div>
+                    <p class="collection-descript">Wordwide shifting available Buyers protection possible!</p>
+                </div>
+            </div>
+            <div class="collection">
+                <div class="collection-banner">
+                    <img src="images/drone.png" alt="">
+                </div>
+                <div class="collection-detail">
+                    <h3 class="title">Drone</h4>
+                    <p class="collection-amnt">$980.25</p>
+                    <div class="ratings">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star-half-stroke"></i>
+                        <span class="point">4.99</span>
+                    </div>
+                    <p class="collection-descript">Wordwide shifting available Buyers protection possible!</p>
+                </div>
+            </div>
+            <div class="collection">
+                <div class="collection-banner">
+                    <img src="images/lights.png" alt="">
+                </div>
+                <div class="collection-detail">
+                    <h3 class="title">Light Setup</h4>
+                    <p class="collection-amnt">$1200.00</p>
+                    <div class="ratings">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star-half-stroke"></i>
+                        <span class="point">4.99</span>
+                    </div>
+                    <p class="collection-descript">Wordwide shifting available Buyers protection possible!</p>
+                </div>
+            </div>
+            <div class="collection">
+                <div class="collection-banner">
+                    <img src="images/setup.png" alt="">
+                </div>
+                <div class="collection-detail">
+                    <h3 class="title">Photoshoot set</h4>
+                    <p class="collection-amnt">$820.40</p>
+                    <div class="ratings">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star-half-stroke"></i>
+                        <span class="point">4.99</span>
+                    </div>
+                    <p class="collection-descript">Wordwide shifting available Buyers protection possible!</p>
+                </div>
+            </div>
+            <div class="collection">
+                <div class="collection-banner">
+                    <img src="images/camera.png" alt="">
+                </div>
+                <div class="collection-detail">
+                    <h3 class="title">Vlogging Camera</h4>
+                    <p class="collection-amnt">$1800.80</p>
+                    <div class="ratings">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star-half-stroke"></i>
+                        <span class="point">4.99</span>
+                    </div>
+                    <p class="collection-descript">Wordwide shifting available Buyers protection possible!</p>
+                </div>
+            </div>
+            <div class="collection">
+                <div class="collection-banner">
+                    <img src="images/single-light.png" alt="">
+                </div>
+                <div class="collection-detail">
+                    <h3 class="title">Green Screen</h4>
+                    <p class="collection-amnt">$25.48</p>
+                    <div class="ratings">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star-half-stroke"></i>
+                        <span class="point">4.99</span>
+                    </div>
+                    <p class="collection-descript">Wordwide shifting available Buyers protection possible!</p>
+                </div>
+            </div>
+            <div class="collection">
+                <div class="collection-banner">
+                    <img src="images/action.png" alt="">
+                </div>
+                <div class="collection-detail">
+                    <h3 class="title">Action Camera</h4>
+                    <p class="collection-amnt">$380.00</p>
+                    <div class="ratings">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star-half-stroke"></i>
+                        <span class="point">4.99</span>
+                    </div>
+                    <p class="collection-descript">Wordwide shifting available Buyers protection possible!</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!------------------------------------------------------------------------
+         feature section 
+    -------------------------------------------------------------------------->
+        <section class="feature">
+            <div class="feature-banner">
+                <img src="images/gear.png" alt="">
+            </div>
+            <div class="feature-details">
+                <h1 class="feature-title">Featured products at one place</h1>
+                <p class="feature-description">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                <button class="btn btn-primary">Join Now <i class="fa-solid fa-arrow-right"></i></button>
+            </div>
+        </section>
     </main>
-    <footer>
-
+    <!---------------------------------------------------------------------- 
+        footer 
+    ------------------------------------------------------------------------>
+    <footer class="footer">
+        <h3 class="footer-title">Influencer products</h3>
+        <p class="copy"><small>Copyright &copy; 2020  influencer products</small></p>
+        <p class="copy"><small>All rights reserved</small></p>
+        <div class="icons">
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-dribbble"></i>
+            <i class="fa-brands fa-twitter"></i>
+            <i class="fa-brands fa-youtube"></i>
+        </div>
     </footer>
 </body>
 </html>
