--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!---------------------------------------------------------
          header start 
     ----------------------------------------------------------->
-    <main>
+    <header>
         <nav class="nav-container">
             <p class="logo-title">Influencer products</p>
             <ul class="items">
@@ -67,11 +67,11 @@
                 <img src="logos/Target.svg" alt="">
             </div>
         </div>
-    <!-- </header> -->
+    </header>
     <!------------------------------------------------------------- 
         header end 
     --------------------------------------------------------------->
-    <!-- <main> -->
+    <main>
     <!--------------------------------------------------------------
          popular collection
     ---------------------------------------------------------------->
@@ -251,7 +251,10 @@
             </div>
             <div class="feature-details">
                 <h1 class="feature-title">Featured products at one place</h1>
-                <p class="feature-description">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                <p class="feature-description">Amet minim mollit non deserunt
+                     ullamco est sit aliqua dolor do amet sint. 
+                     Velit officia consequat duis enim velit mollit.
+                      Exercitation veniam consequat sunt nostrud amet.</p>
                 <button class="btn btn-primary">Join Now <i class="fa-solid fa-arrow-right"></i></button>
             </div>
         </section>
